Draft architecture for view-based CPS, using changes of Vitruv-Change
Signed-off-by: Jean Patrick Mathes <jeanpatrick.mathes@gmx.de>